找回密码+邮箱登录

--- a/login-master/templates/login.html
+++ b/login-master/templates/login.html
@@ -74,7 +74,7 @@
 
                             {{ csrf_input }}
                             <div class="form-group">
-                                <input type="text" name="username" class="form-control input-lg" placeholder="Your account" id="username" maxlength="128" required />
+                                <input type="text" name="username" class="form-control input-lg" placeholder="Your account/Email" id="username" maxlength="128" required />
                             </div>
                             <div class="form-group">
                                 <input type="password" name="password" class="form-control input-lg" placeholder="Password" id="password" maxlength="128" required />
@@ -85,6 +85,8 @@
                             </div>
                             <p class="privacy text-center">We will not share your personal privacy. Read our <a
                                     href="#">privacy policy</a>.</p>
+                            <p class="privacy text-center">Forget your password? <a
+                                    href="/FindPassword/">Click here to reset</a>.</p>
                         </form>
                         {# </form> #}
                     </div>
