--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -9,39 +9,42 @@
         android:id="@+id/subtask_progress"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
-        android:layout_gravity="center_horizontal"/>
-    <LinearLayout
+        android:layout_gravity="center" />
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="180dp"
-        android:orientation="horizontal">
-        <Button
-            android:id="@+id/previous_subtask"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="center_vertical"
-            android:text="pre"/>
+        android:layout_marginRight="5dp">
         <FrameLayout
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="180dp"
-            android:layout_weight="3">
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:layout_centerInParent="true">
             <ImageView
                 android:id="@+id/img_subtask"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="180dp"
                 android:layout_gravity="center"
                 android:layout_marginBottom="10dp"/>
 
         </FrameLayout>
         <Button
-            android:id="@+id/next_subtask"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="center_vertical"
-            android:text="NEXT"/>
-
-    </LinearLayout>
+            android:id="@+id/give_up"
+            android:layout_width="50dp"
+            android:layout_height="40dp"
+            android:text="放弃"
+            android:layout_alignParentRight="true"
+            android:layout_above="@+id/submit"
+            android:textSize="12sp"/>
+        <Button
+            android:id="@+id/submit"
+            android:layout_width="50dp"
+            android:layout_height="40dp"
+            android:text="提交"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:textSize="12sp"/>
+    </RelativeLayout>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/qa_recyle_view"
         android:layout_width="match_parent"
