--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#fff"
+    android:orientation="vertical">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -12,6 +18,7 @@
         android:layout_gravity="center" />
 
     <RelativeLayout
+        android:id="@+id/media_frame"
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:layout_marginRight="5dp">
@@ -45,25 +52,6 @@
                 android:layout_marginTop="5dp" />
 
         </FrameLayout>
-        <LinearLayout
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:orientation="vertical">
-            <Button
-                android:id="@+id/give_up"
-                android:layout_width="50dp"
-                android:layout_height="40dp"
-                android:text="放弃"
-                android:textSize="12sp" />
-
-            <Button
-                android:id="@+id/submit"
-                android:layout_width="50dp"
-                android:layout_height="40dp"
-                android:text="提交"
-                android:textSize="12sp" /></LinearLayout>
     </RelativeLayout>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/qa_recyle_view"
@@ -75,3 +63,41 @@
     </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
+    <com.michaldrabik.tapbarmenulib.TapBarMenu
+        android:id="@+id/tapBarMenu"
+        android:layout_width="200dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="24dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        app:tbm_buttonPosition = "right"
+        app:tbm_backgroundColor="#135695"
+        >
+
+        <ImageView
+            android:id="@+id/give_up"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:src="@mipmap/give_up"
+            />
+
+
+        <ImageView
+            android:id="@+id/submit"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:src="@mipmap/submit"
+            />
+
+        <Space
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            />
+    </com.michaldrabik.tapbarmenulib.TapBarMenu>
+</RelativeLayout>
