前端_选项统计

--- a/login/templates/choice_questions_result.html
+++ b/login/templates/choice_questions_result.html
@@ -98,11 +98,16 @@
                                 <source src="{{ sub_task.file.url }}" type="video/mp4">
                             </video>
                         {% endif %}
+
                         {% set i = loop.index %}
                         <h2>Q{{ i }}:{{ qa.question }}</h2>{# 问题 #}
                         {% for answer in qa.answers %}
                             <p>{{ chr(64 + loop.index) }}. {{ answer[0] }}</p>{# 选项 #}
                         {% endfor %}
+                     <form action="/choice_questions_result/" method="post">
+                    {{ csrf_input }}
+                    <button type="submit"  class="btn btn-success">查看选项统计报告</button>
+                     </form>
                         <ul class=" list-inline">
                             <li class="line"></li>
                             <li class="line highlight"></li>
