单选+多选+问答

--- a/app/src/main/res/layout/item_select_multi.xml
+++ b/app/src/main/res/layout/item_select_multi.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/multi_linear_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -15,12 +16,4 @@
         android:layout_marginRight="5dp"
         android:textColor="#1e1e15"
         android:textSize="18sp"/>
-    <RadioGroup
-        android:id="@+id/radio_group"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="5dp" />
-
 </LinearLayout>
