--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -16,19 +16,12 @@
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_gravity="center" />
-
-    <RelativeLayout
-        android:id="@+id/media_frame"
-        android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:layout_marginRight="5dp">
-
         <FrameLayout
+            android:id="@+id/media_frame"
             android:layout_width="wrap_content"
             android:layout_height="180dp"
-            android:layout_centerInParent="true"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true">
+            android:layout_marginRight="5dp"
+            android:layout_gravity="center">
 
             <ImageView
                 android:id="@+id/img_subtask"
@@ -52,7 +45,6 @@
                 android:layout_marginTop="5dp" />
 
         </FrameLayout>
-    </RelativeLayout>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/qa_recyle_view"
         android:layout_width="match_parent"
@@ -77,7 +69,7 @@
         <ImageView
             android:id="@+id/give_up"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_weight="1"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
@@ -88,7 +80,7 @@
         <ImageView
             android:id="@+id/submit"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="56dp"
             android:layout_weight="1"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
@@ -96,7 +88,7 @@
             />
 
         <Space
-            android:layout_width="80dp"
+            android:layout_width="50dp"
             android:layout_height="match_parent"
             />
     </com.michaldrabik.tapbarmenulib.TapBarMenu>
