辅助审核+关键词搜索+统计报告+阈值通过

--- a/login/templates/chart.html
+++ b/login/templates/chart.html
@@ -151,7 +151,7 @@
 <option value="80">80%</option>
     <option value="100">100%</option>
 </select>
-       <button  type="submit" style="margin-left: 30px;"class="btn btn-success">   通过高于该阈值的答案  </button>
+       <button  type="submit" style="margin-left: 30px;"class="btn btn-success" >   通过高于该阈值的答案  </button>
 </form>
 
             <div id="page-inner" style="opacity: 0.8">
@@ -190,9 +190,11 @@
                         </div>
 
                     </div>
+
                 </div>
                 <!-- /. ROW  -->
-            </div></form>
+                    </form>
+            </div>
             {% endfor %}
             <!-- /. PAGE INNER  -->
         </div>
