--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -10,7 +10,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#ebfbea">
+    android:background="@color/taskBackground">
     <TextView
         android:id="@+id/subtask_progress"
         android:layout_width="wrap_content"
@@ -20,8 +20,16 @@
             android:id="@+id/media_frame"
             android:layout_width="wrap_content"
             android:layout_height="180dp"
+            android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_gravity="center">
+
+
+            <com.oneisall.DoTasks.Adapters.MyJzvdStd
+                android:id="@+id/videoplayer"
+                android:layout_width="wrap_content"
+                android:layout_height="180dp"
+                android:visibility="gone"/>
 
             <ImageView
                 android:id="@+id/img_subtask"
@@ -30,28 +38,13 @@
                 android:layout_gravity="center"
                 android:layout_marginBottom="10dp" />
 
-            <com.oneisall.DoTasks.Adapters.MyJzvdStd
-                android:id="@+id/videoplayer"
-                android:layout_width="wrap_content"
-                android:layout_height="180dp"/>
-            <TextView
-                android:id="@+id/music_player"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text = "MUSIC\tPlayer"
-                android:textColor="#cccccc"
-                android:textSize="20sp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="5dp" />
-
         </FrameLayout>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/qa_recyle_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:background="#ebfbea">
+        android:background="@color/taskBackground">
     </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
