--- a/app/src/main/res/layout/item_select_multi.xml
+++ b/app/src/main/res/layout/item_select_multi.xml
@@ -5,6 +5,8 @@
     android:orientation="vertical"
     android:layout_marginTop="10dp"
     android:layout_marginBottom="10dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginLeft="20dp"
     android:background="#fff">
     <TextView
         android:id="@+id/single_text"
@@ -14,11 +16,12 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="5dp"
         android:textColor="#1e1e15"
-        android:textSize="18sp"/>
+        android:textSize="15sp"/>
     <LinearLayout
         android:id="@+id/multi_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
         android:orientation="vertical">
     </LinearLayout>
 </LinearLayout>
