--- a/Android/app/src/main/res/layout/activity_home.xml
+++ b/Android/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Views.HomeActivity">
+    tools:context=".views.HomeActivity">
 
     <TextView
         android:id="@+id/message"
